# Fleet-Engine-Maintenance

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/analyzers/: run_analyzer.py
app/db/: database.py  models.py
app/repositories/: run_repository.py
app/schemas/: optimization.py  run_analysis.py  run_storage.py
app/services/: optimization_service.py
dashboard/: api_client.py  app.py
data/v1/fleets/: fleet_001.json
data/v1/scenarios/: baseline.json
outputs_copy/: rolling_plan_shop_starts.txt
scripts/: compare_solvers.py  run_GA_mealpy_schedule.py  run_cpsat_schedule.py  run_fleet_simple.py  run_health_sim.py  run_rolling_horizon.py
src/fleet_engine_planning/controllers/: rolling_horizon.py
src/fleet_engine_planning/domain/: evaluate.py
src/fleet_engine_planning/fleet/: costs.py  engine.py  failure.py
src/fleet_engine_planning/optimization/: precompute.py
src/fleet_engine_planning/optimizer/: precompute.py
src/fleet_engine_planning/preprocessing/: loaders.py  schema.py
src/fleet_engine_planning/simulation/: deterioration.py
src/fleet_engine_planning/solvers/: __init__.py  cpsat_schedule.py  ga_mealpy.py
src/fleet_engine_planning/visualization/: health_trajectories.py  schedule_plots.py
tests/: conftest.py
tests/api/: test_api.py  test_api_manual.py
tests/json/: test.json
tests/unit/: test_ga_solver.py  test_optimization_service.py  test_run_analyzer.py  test_schema_layer.py
