[project]
name = "EngineMaintenanceUncertainty"
version = "0.1.0"
description = "Fleet Engine Maintenance under Uncertainty"
requires-python = ">=3.13,<3.14"

dependencies = [
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "matplotlib>=3.10.8",
    "ortools>=9.15.6755",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
